Use shared public chat rooms
